# linalg-transform-mlir

./: .gitignore  README.md
docs/: README.md  learning-motivation-from-affine-mlir.md  linalg-pass-internals.html  p1-execution-report.html  pass-internals-plan.html
docs/assets/: code-highlight.js
docs/transform-dialect/: 0011-transform-tile-first.html  0012-pass-vs-transform-script.html  0013-match-and-handle.html  0014-tile.html  0015-fuse.html  0016-pad-and-pack.html  0017-vectorize.html  0018-rep-transforms.html  0019-bufferize-and-loops.html  0020-full-kernel-schedule.html  0021-schedule-sweep.html  0022-control-flow-matchers.html  anim.js  dict.css  dict.js  plan.html
experiments/: README.md
experiments/0001-generalize-named-ops/: README.md  run.sh
experiments/0002-specialize-generic-ops/: README.md  run.sh
experiments/0003-inline-scalar-operands/: README.md  run.sh
experiments/0004-named-op-conversion/: README.md  run.sh
experiments/0005-elementwise-to-linalg/: README.md  run.sh
experiments/0006-fuse-elementwise-ops/: README.md  run.sh
experiments/0007-fold-unit-extent-dims/: README.md  run.sh
experiments/0008-detensorize/: README.md  run.sh
experiments/0009-linalg-to-loops-trio/: README.md  run.sh
experiments/0010-block-pack-matmul/: README.md  run.sh
experiments/0011-transform-tile-first/: run.sh
experiments/0012-pass-vs-transform-script/: run.sh
experiments/0013-match-and-handle/: run.sh
experiments/0014-tile/: run.sh
experiments/0015-fuse/: run.sh
experiments/0016-pad-and-pack/: run.sh
experiments/0017-vectorize/: run.sh
experiments/0018-rep-transforms/: run.sh
experiments/0019-bufferize-and-loops/: run.sh
experiments/0020-full-kernel-schedule/: run.sh
experiments/0021-schedule-sweep/: run.sh
log/: 0001-generalize-named-ops.html  0002-specialize-generic-ops.html  0003-inline-scalar-operands.html  0004-named-op-conversion.html  0005-elementwise-to-linalg.html  0006-fuse-elementwise-ops.html  0007-fold-unit-extent-dims.html  0008-detensorize.html  0009-linalg-to-loops-trio.html  0010-block-pack-matmul.html  README.md
log/assets/: work-log.css
out-of-tree/: CMakeLists.txt
out-of-tree/include/MyPasses/: Passes.h
out-of-tree/lib/Passes/: CMakeLists.txt  HelloInspectPass.cpp  MyBlockPackMatmul.cpp  MyDetensorize.cpp  MyElementwiseToLinalg.cpp  MyFoldUnitExtentDims.cpp  MyFuseElementwiseOps.cpp  MyGeneralizeNamedOps.cpp  MyInlineScalarOperands.cpp  MyLinalgToLoopsTrio.cpp  MyNamedOpConversion.cpp  MySpecializeGenericOps.cpp  PassRegistration.cpp
out-of-tree/tools/my-mlir-opt/: CMakeLists.txt  main.cpp
(+203 files in other folders)
